--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,4 +1,4 @@
 Email : Email
 Password : Mot de passe
 Agree terms : Conditions d'utilisations
-To swap language, please add /fr at the end of the url : Pour changer de langue, merci d'ajouter /en à la fin de l'url
+To swap language, please add /fr or /en at the end of the url : Pour changer de langue, merci d'ajouter /fr ou /en à la fin de l'url
