--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,4 +1,4 @@
 Email : Email
 Password : Password
 Agree terms : Agree terms
-To swap language, please add /fr at the end of the url : To swap language, please add /fr at the end of the url
+To swap language, please add /fr or /en at the end of the url : To swap language, please add /fr or /en at the end of the url
